# ChangeLog for net-misc/x2goserver
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*x2goserver-3.0.1.5 (15 Apr 2010)

  15 Apr 2010 Joachim Langenbach <joachim@falaba.de>
  Added x2goserver-3.0.1.5
  Removed kde useflag, because KDE3 is not supported anymore by gentoo
  Changed postgressql to postgres useflag, because it's the official postgres useflag

*x2goserver-3.0.1.1 (02 Sep 2009)

  02 Sep 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +x2goserver-3.0.1.1.ebuild:
  Bump with lots of fixes from calchan, including sqlite support
  (USE-enabled by default), installation and setup rework, EAPI2, ...

  16 Dec 2008; Bernard Cafarelli <voyageur@gentoo.org>
  x2goserver-2.0.1.16.ebuild:
  Depend on ldap ebuilds

  15 Dec 2008; Bernard Cafarelli <voyageur@gentoo.org>
  x2goserver-2.0.1.16.ebuild:
  Add dependency on KDE tools (bindings and sessionadministration)

  12 Dec 2008; Bernard Cafarelli <voyageur@gentoo.org>
  x2goserver-2.0.1.16.ebuild:
  Switch to EAPI=1, remote shares are useful

  12 Dec 2008; Bernard Cafarelli <voyageur@gentoo.org> files/x2goserver.init, +metadata.xml,
  x2goserver-2.0.1.16.ebuild:
  Initial commit, basic remote desktop works
