@@ -1,12 +1,6 @@
 AUX x2gomountdirs_no_desktop_icon.patch 1676 RMD160 6e5b9fd22a491ae6a482b82bfca51870ca1b8e2b SHA1 b81ef59db5e0844450b5fc7e232a61d053a906db SHA256 1ddd1f6a724bb5ff35e59a72d2d307a7880a3a87f777007635e4c5032e2b2957
 AUX x2goserver.init 493 RMD160 5633609c39c43c7d810712cecb89cf947329862d SHA1 a6096f59d62f9be79250accddbc912d62b6226cd SHA256 b03cffd2c4eb539cc1904c42058d18f8b389cf7ed26ea4175ee0a136249c3feb
-DIST x2goserver_2.0.1-19_all.deb 14536 RMD160 9052af7fe76051d13dbda6b8ca4dd0192e88218a SHA1 5610b16b5529ea65bd19bfee7a7a9dfc8079b716 SHA256 513173c738dfa6a4e379ccb1a99eaff46803ad08a325073fbca8b76b6be76d56
-DIST x2goserver_3.0.0-1_all.deb 15000 RMD160 ce8d06fefa8426cedaf9ac64bc60af17de8cc905 SHA1 90b6377d8e02f66bc396a4279c32f3d25266088f SHA256 99b5bd556f2cdb9bb399b9c35efa4b8406f23a8ea766d84a060a0e1671c468ba
-DIST x2goserver_3.0.1-1_all.deb 15888 RMD160 f2ec0b2ba67bcc61973adf2152f8411198a63a2e SHA1 082acf589e6c844c2705a03328a68387b39d8900 SHA256 ac2aaf6f9a90f62f76281d782ab251cca4c53ff38a5e9d6b301f3897228efd5e
 DIST x2goserver_3.0.1-5_all.deb 16806 RMD160 cdfd9cb079c7a4d4f943be6fd13e0d3ec2b04182 SHA1 735807f16e95b7897a766c484fd6f08888e08369 SHA256 408c4dc52af8b2c93c7afeab40ce0e4588e226f45cceee4f3013de93623022c9
-EBUILD x2goserver-2.0.1.19.ebuild 1723 RMD160 08e57cc4d2389c5aa99b5896168bc494dc959fa2 SHA1 17add51024f5a5268c6cd3adff83bd2fe0fe0761 SHA256 209906e4d732e1d2ede75519efd797a847f49cffe60837f599a70dd2f6b0f8e5
-EBUILD x2goserver-3.0.0.1.ebuild 1907 RMD160 f4056c7a9c0d4c70c2f79d00ea31f0b1e5b42ecc SHA1 02636a263e61e6046c314c4c2b135a92b17876b6 SHA256 a5de705abfa04cf40500d57212ad0eb8672752de47023a11758dc361cd21164f
-EBUILD x2goserver-3.0.1.1.ebuild 2459 RMD160 feff1484fb45feb243ede856cdb36a5b1797f672 SHA1 fc568f4fa11ec4a4b943d81a6e8eb7d8dd2ec952 SHA256 a794dafedae53d4b64e0e73aa5b53e7cb3d6e9a9720e0402df02b9107cd09e93
-EBUILD x2goserver-3.0.1.5.ebuild 2540 RMD160 a2aa7d6f7c259ce2d364858b347d3d257a4c80e4 SHA1 c4e17a82e57cd025dc6175cd061433f79da1cae3 SHA256 42992abd2ce20e2150c35e500b1437f30be82dca5882ad8917b4d0a47c026fa5
-MISC ChangeLog 1213 RMD160 4226f649ada2f96a14ae6f1f2adbc0bd9c000413 SHA1 5d3ff83d8b26a467458a5ff591638331ef8c7b97 SHA256 4ce51391005fdf4c0343a5d75143b4003368f4ddefd9326dc6455debff3c4565
+EBUILD x2goserver-3.0.1.5.ebuild 2541 RMD160 971fd604a98d76de7bae10742c1383fd68bd1dbd SHA1 1647087d9da09adf949e261ba09a1f744a9f066c SHA256 70855ec4e7360b8ff2cdd74a14b3125325f085b65ac46e020b6a15690334ec8f
+MISC ChangeLog 1510 RMD160 79aab5261552113a110dd4098e90732b6907a386 SHA1 444a84cea7c9b58889f81c2b69a2b97153e4d326 SHA256 fe5a6dc38c4bc1df2b33cae59eec0d856f3e467e5c7a9a425d7c53b2df15b71b
 MISC metadata.xml 307 RMD160 0172cd4fc792a41fde528ec788ab0dd98f3d21bc SHA1 953412d99904e25f4845fdfda587298e7cbc7f2a SHA256 b19b0330b6614bc27421032b94f6ade24661e38c818140c598d50cb91e82bce6
