@@ -1,13 +1,21 @@
 # ChangeLog for net-misc/x2goserver
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Apr 2010; Bernard Cafarelli <voyageur@gentoo.org>
+  -x2goserver-2.0.1.19.ebuild, -x2goserver-3.0.0.1.ebuild,
+  -x2goserver-3.0.1.1.ebuild, x2goserver-3.0.1.5.ebuild:
+  Drop old versions, small fixes (missing eutils and update postgres USE
+  flag in ebuild)
 
 *x2goserver-3.0.1.5 (15 Apr 2010)
 
-  15 Apr 2010 Joachim Langenbach <joachim@falaba.de>
+  15 Apr 2010; Joachim Langenbach <joachim@falaba.de>
+  +x2goserver-3.0.1.5.ebuild:
   Added x2goserver-3.0.1.5
   Removed kde useflag, because KDE3 is not supported anymore by gentoo
-  Changed postgressql to postgres useflag, because it's the official postgres useflag
+  Changed postgressql to postgres useflag, because it's the official 
+  postgres useflag
 
 *x2goserver-3.0.1.1 (02 Sep 2009)
 
